# AI_Guided_SOC_Scenarios

./: AI_Guided_SOC_Scenarios.sln  devenv.nix
Components/: App.razor  _Imports.razor
Components/Layout/: AIRoom.razor  AIRoom.razor.css  ChatComponent.razor  ChatComponent.razor.css  LearningRoomLayout.razor  MainLayout.razor  MainLayout.razor.css  NavMenu.razor  NavMenu.razor.css  TraditionalLearningRoom.razor  TraditionalLearningRoom.razor.css
Components/Pages/: ExampleAIRoom.razor  Home.razor  LearningRooms.razor
Properties/: launchSettings.json
Site/: Program.cs  Site.csproj
Site/Components/: App.razor  _Imports.razor
Site/Components/Layout/: AIChat.razor  AIChat.razor.css  ChatComponent.razor  ChatComponent.razor.css  LearningRoomLayout.razor  LearningRoomLayout.razor.css  MainLayout.razor  MainLayout.razor.css  NavMenu.razor  NavMenu.razor.css
Site/Components/Models/: AIChat.razor  AIChat.razor.css  FoldingSection.razor  FoldingSection.razor.css  Room.razor
Site/Components/Pages/: ExampleAIRoom.razor  Home.razor  LearningRoom.razor
Site/Properties/: launchSettings.json
Test_Suite_AI_Guided_SOC_Scenarios/: CounterCSharpTests.cs  Test_Suite_AI_Guided_SOC_Scenarios.csproj
ai_guided_soc_scenarios/: pyproject.toml
ai_guided_soc_scenarios/docs/: project_details.md
