[tool.poetry]
name = "ai-guided-soc-scenarios"
version = "0.1.0"
description = ""
authors = ["sreiswig <sam.reiswig@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
debugpy = "^1.8.12"
langgraph = "^0.2.74"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
